--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "express": "^4.15.2",
     "gulp-nodemon": "^2.2.1",
     "morgan": "^1.8.1",
-    "node-lirc": "^0.0.4"
+    "nconf": "^0.8.4"
   }
 }
