--- a/ac-ir-controller.conf
+++ b/ac-ir-controller.conf
@@ -8,7 +8,7 @@ begin remote
 
       begin raw_codes
 
-        name 18c-auto-auto
+        name 18c-auto
               468      374      500      373      471      371
               498      376      467      403      472    25360
              3540     1687      496     1246      496      375
@@ -108,7 +108,7 @@ begin remote
               498     1243      498      375      498      384
               488
 
-        name 18c-cool-auto
+        name 18c-cool
               435      404      499      372      499      373
               494      348      495      376      471    25386
              3542     1688      444     1299      468      376
@@ -208,7 +208,7 @@ begin remote
               444      410      488     1246      494      376
               494
 
-        name 18c-heat-auto
+        name 18c-heat
               496      346      499      370      503      374
               494      376      467      376      499    25357
              3561     1668      498     1241      503      345
@@ -308,7 +308,7 @@ begin remote
               470     1269      499     1246      494      375
               496
 
-        name 19c-auto-auto
+        name 19c-auto
               442      404      467      405      466      403
               467      375      473      400      470    25387
              3516     1724      429     1300      446      401
@@ -408,7 +408,7 @@ begin remote
               467     1274      471      377      466      403
               467
 
-        name 19c-cool-auto
+        name 19c-cool
               488      375      471      375      498      374
               495      376      463      380      494    25362
              3544     1686      466     1285      487      349
@@ -508,7 +508,7 @@ begin remote
               474      397      498     1247      494      377
               495
 
-        name 19c-heat-auto
+        name 19c-heat
               497      407      414      399      503      367
               499      372      473      370      499    25358
              3548     1684      497     1245      500      344
@@ -608,7 +608,7 @@ begin remote
               467     1273      467     1285      460      403
               466
 
-        name 20c-auto-auto
+        name 20c-auto
               435      406      467      401      471      402
               439      403      467      407      467    25360
              3515     1715      470     1274      466      405
@@ -708,7 +708,7 @@ begin remote
               467     1270      471      402      472      372
               472
 
-        name 20c-cool-auto
+        name 20c-cool
               495      355      467      399      476      396
               498      371      473      376      494    25359
              3547     1677      503     1246      472      371
@@ -808,7 +808,7 @@ begin remote
               494      376      471     1269      498      372
               484
 
-        name 20c-heat-auto
+        name 20c-heat
               438      409      466      407      464      404
               466      375      469      403      486    25348
              3515     1725      455     1271      472      403
@@ -908,7 +908,7 @@ begin remote
               478     1264      470     1272      469      401
               469
 
-        name 21c-auto-auto
+        name 21c-auto
               469      377      496      380      495      371
               513      331      499      371      499    25356
              3549     1681      470     1273      472      368
@@ -1008,7 +1008,7 @@ begin remote
               494     1247      499      345      499      371
               495
 
-        name 21c-cool-auto
+        name 21c-cool
               496      376      468      376      475      397
               499      371      499      345      498    25359
              3554     1677      494     1250      494      376
@@ -1108,7 +1108,7 @@ begin remote
               503      370      472     1284      457      374
               473
 
-        name 21c-heat-auto
+        name 21c-heat
               465      378      468      418      458      402
               467      376      469      400      467    25393
              3514     1725      421     1304      457      390
@@ -1208,7 +1208,7 @@ begin remote
               454     1273      468     1269      476      371
               472
 
-        name 22c-auto-auto
+        name 22c-auto
               496      372      447      397      502      370
               471      403      468      375      472    25384
              3553     1678      471     1268      497      378
@@ -1308,7 +1308,7 @@ begin remote
               467     1274      471      398      473      371
               499
 
-        name 22c-cool-auto
+        name 22c-cool
               457      405      441      405      465      402
               472      403      468      375      468    25385
              3518     1712      472     1269      472      402
@@ -1408,7 +1408,7 @@ begin remote
               456      402      445     1300      439      403
               467
 
-        name 22c-heat-auto
+        name 22c-heat
               463      379      468      410      463      399
               472      386      459      405      469    25381
              3532     1702      440     1296      445      402
@@ -1508,7 +1508,7 @@ begin remote
               441     1304      441     1300      468      375
               468
 
-        name 23c-auto-auto
+        name 23c-auto
               464      379      471      428      442      403
               465      406      439      404      467    25396
              3509     1708      478     1270      469      375
@@ -1608,7 +1608,7 @@ begin remote
               480     1261      467      403      472      403
               467
 
-        name 23c-cool-auto
+        name 23c-cool
               443      402      499      389      483      369
               470      377      493      377      471    25356
              3520     1710      497     1245      472      400
@@ -1708,7 +1708,7 @@ begin remote
               499      376      467     1274      510      361
               497
 
-        name 23c-heat-auto
+        name 23c-heat
               473      403      442      402      469      398
               499      371      472      376      468    25392
              3513     1710      497     1247      483      388
@@ -1808,7 +1808,7 @@ begin remote
               498     1237      504     1245      499      371
               499
 
-        name 24c-auto-auto
+        name 24c-auto
               438      405      467      424      482      373
               466      375      510      360      468    25385
              3523     1710      443     1299      440      403
@@ -1908,7 +1908,7 @@ begin remote
               482     1246      463      409      465      403
               441
 
-        name 24c-cool-auto
+        name 24c-cool
               496      351      495      373      477      396
               472      398      471      377      493    25361
              3528     1702      497     1245      495      349
@@ -2008,7 +2008,7 @@ begin remote
               498     1246      494     1246      474      396
               473
 
-        name 24c-heat-auto
+        name 24c-heat
               470      377      469      399      473      400
               464      407      443      404      466    25388
              3517     1708      476     1273      466      376
@@ -2108,7 +2108,7 @@ begin remote
               469     1268      472     1273      472      414
               430
 
-        name 25c-auto-auto
+        name 25c-auto
               441      404      468      415      458      401
               440      402      467      408      468    25361
              3518     1712      466     1274      467      403
@@ -2208,7 +2208,7 @@ begin remote
               450     1300      440      402      468      403
               468
 
-        name 25c-cool-auto
+        name 25c-cool
               463      377      469      400      476      396
               498      345      499      376      468    25386
              3546     1683      470     1273      445      397
@@ -2308,7 +2308,7 @@ begin remote
               495     1245      470     1271      472      398
               499
 
-        name 25c-heat-auto
+        name 25c-heat
               495      373      443      399      503      374
               466      403      441      403      472    25383
              3519     1712      469     1274      472      370
@@ -2408,7 +2408,7 @@ begin remote
               467     1274      473     1272      467      403
               467
 
-        name 26c-auto-auto
+        name 26c-auto
               443      403      469      418      453      405
               463      375      473      402      464    25391
              3517     1712      444     1296      444      402
@@ -2508,7 +2508,7 @@ begin remote
               468     1269      476      401      469      402
               468
 
-        name 26c-cool-auto
+        name 26c-cool
               464      403      470      374      475      402
               494      375      467      375      468    25387
              3546     1687      466     1278      467      402
@@ -2608,7 +2608,7 @@ begin remote
               466     1273      467     1277      469      402
               471
 
-        name 26c-heat-auto
+        name 26c-heat
               442      404      468      406      464      402
               440      418      453      402      472    25358
              3518     1712      470     1273      469      401
@@ -2708,7 +2708,7 @@ begin remote
               439     1272      467     1274      466      403
               471
 
-        name 27c-auto-auto
+        name 27c-auto
               464      405      440      402      471      406
               467      403      440      403      467    25389
              3526     1705      465     1274      472      376
@@ -2808,7 +2808,7 @@ begin remote
               473     1283      461      401      468      376
               467
 
-        name 27c-cool-auto
+        name 27c-cool
               469      374      499      373      499      374
               472      371      499      371      499    25329
              3557     1676      498     1241      498      376
@@ -2908,7 +2908,7 @@ begin remote
               499     1243      502     1241      502      371
               497
 
-        name 27c-heat-auto
+        name 27c-heat
               464      377      463      429      446      403
               472      402      441      402      468    25394
              3508     1715      472     1271      467      376
@@ -3008,7 +3008,7 @@ begin remote
               468     1273      472     1273      463      408
               467
 
-        name 28c-auto-auto
+        name 28c-auto
               466      375      472      403      471      400
               468      402      440      403      467    25392
              3516     1716      464     1274      471      375
@@ -3108,7 +3108,7 @@ begin remote
               472     1272      472      398      473      410
               459
 
-        name 28c-cool-auto
+        name 28c-cool
               467      373      469      400      478      400
               467      376      467      403      467    25387
              3530     1703      439     1300      457      387
@@ -3208,7 +3208,7 @@ begin remote
               473     1272      467     1270      489      385
               473
 
-        name 28c-heat-auto
+        name 28c-heat
               468      373      499      377      496      374
               444      399      471      399      472    25366
              3512     1713      465     1274      471      399
@@ -3308,7 +3308,7 @@ begin remote
               471     1280      488     1245      498      372
               472
 
-        name 29c-auto-auto
+        name 29c-auto
               495      349      470      402      470      399
               470      403      439      403      472    25385
              3527     1697      449     1300      440      403
@@ -3408,7 +3408,7 @@ begin remote
               505     1246      493      375      472      399
               511
 
-        name 29c-cool-auto
+        name 29c-cool
               442      404      469      398      473      400
               471      372      472      403      464    25392
              3516     1711      445     1297      444      423
@@ -3508,7 +3508,7 @@ begin remote
               446     1298      440     1304      440      403
               467
 
-        name 29c-heat-auto
+        name 29c-heat
               469      405      444      397      474      400
               470      399      468      376      472    25382
              3524     1712      467     1272      468      403
@@ -3608,7 +3608,7 @@ begin remote
               462     1271      472     1284      457      402
               467
 
-        name 30c-auto-auto
+        name 30c-auto
               430      406      472      416      455      403
               439      403      468      403      482    25356
              3507     1728      458     1272      468      402
@@ -3708,7 +3708,7 @@ begin remote
               472     1274      466      403      467      403
               441
 
-        name 30c-cool-auto
+        name 30c-cool
               495      378      472      370      504      369
               499      375      494      348      498    25356
              3548     1686      498     1241      499      382
@@ -3808,7 +3808,7 @@ begin remote
               500     1241      503     1242      499      376
               466
 
-        name 30c-heat-auto
+        name 30c-heat
               439      405      467      401      471      401
               441      406      468      403      467    25367
              3510     1716      466     1277      468      401
